<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/BaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/scheme_network"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_scheme"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="VISA" />

        <TextView
            android:id="@+id/textView3"
            style="@style/BaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_type"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="Debit" />

        <TextView
            android:id="@+id/textView5"
            style="@style/BaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/brand"
            app:layout_constraintStart_toStartOf="@+id/tv_scheme"
            app:layout_constraintTop_toBottomOf="@+id/tv_scheme" />

        <TextView
            android:id="@+id/tv_brand"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="VISA/DANKORT" />

        <TextView
            android:id="@+id/textView7"
            style="@style/BaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/prepaid"
            app:layout_constraintStart_toStartOf="@+id/tv_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_prepaid"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="YES" />

        <TextView
            android:id="@+id/textView9"
            style="@style/BaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/card_number"
            app:layout_constraintStart_toStartOf="@+id/tv_brand"
            app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

        <TextView
            android:id="@+id/textView10"
            style="@style/SmallLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/length"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            style="@style/SmallLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/luhn"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/tv_card_number_length"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:text="16" />

        <TextView
            android:id="@+id/tv_card_number_luhn"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:text="YES" />

        <TextView
            android:id="@+id/textView14"
            style="@style/BaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@+id/tv_prepaid"
            app:layout_constraintTop_toBottomOf="@+id/tv_prepaid" />

        <TextView
            android:id="@+id/tv_country"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLength="25"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:text="DK Denmark" />

        <TextView
            android:id="@+id/tv_latitude_and_longitude"
            style="@style/ClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_country"
            app:layout_constraintTop_toBottomOf="@+id/tv_country" />

        <TextView
            android:id="@+id/textView17"
            style="@style/BaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bank"
            app:layout_constraintStart_toStartOf="@+id/tv_card_number_length"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_number_length" />

        <TextView
            android:id="@+id/tv_bank_name_and_city"
            style="@style/BaseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            tools:text="Jyske Bank, Hjørring" />

        <TextView
            android:id="@+id/tv_bank_url"
            style="@style/ClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_bank_name_and_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_bank_name_and_city"
            tools:text="www.jyskebank.dk" />

        <TextView
            android:id="@+id/tv_bank_phone"
            style="@style/ClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_bank_url"
            app:layout_constraintTop_toBottomOf="@+id/tv_bank_url"
            tools:text="+4589893300" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>